--- a/Moq.Com.Demo.Main/Moq.Com.Demo.Main.csproj
+++ b/Moq.Com.Demo.Main/Moq.Com.Demo.Main.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{B3471E80-24AA-47E7-B9A3-F972E35DF93F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Moq.Com.Demo.Main</RootNamespace>
+    <RootNamespace>Moq.Com.Demo</RootNamespace>
     <AssemblyName>Moq.Com.Demo.Main</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -39,7 +39,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
