--- a/Moq.Com.Demo.Main.Tests.Unit/packages.config
+++ b/Moq.Com.Demo.Main.Tests.Unit/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="4.6.2" targetFramework="net462" />
   <package id="Autofac.Extras.Moq" version="4.2.0" targetFramework="net462" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net462" />
+  <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6071" targetFramework="net462" />
   <package id="Moq" version="4.8.2" targetFramework="net462" />
   <package id="NUnit" version="3.10.1" targetFramework="net462" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net462" />
