--- a/Moq.Com.Demo.Main/packages.config
+++ b/Moq.Com.Demo.Main/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="GitVersion" version="3.6.5" targetFramework="net462" />
   <package id="GitVersionTask" version="3.6.5" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6071" targetFramework="net462" />
 </packages>
