--- a/Moq.Com.Demo.Main/packages.config
+++ b/Moq.Com.Demo.Main/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Excel-DNA.Interop" version="14.0.1" targetFramework="net462" />
   <package id="GitVersion" version="3.6.5" targetFramework="net462" />
   <package id="GitVersionTask" version="3.6.5" targetFramework="net462" developmentDependency="true" />
-  <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6071" targetFramework="net462" />
 </packages>
