Add demo class in Main, and Fixture - and show that the fixture doesn't pass

--- a/Moq.Com.Demo.Main/Moq.Com.Demo.Main.csproj
+++ b/Moq.Com.Demo.Main/Moq.Com.Demo.Main.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BindingWrapper.cs" />
+    <Compile Include="FooClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
