Add a generic class so we can use the Application type from the test dll
- rearrange tests to show the effect of using either the Main or Test dll type

--- a/Moq.Com.Demo.Main/Moq.Com.Demo.Main.csproj
+++ b/Moq.Com.Demo.Main/Moq.Com.Demo.Main.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="BindingWrapper.cs" />
     <Compile Include="FooClass.cs" />
+    <Compile Include="FooClassGeneric.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
