--- a/Moq.Com.Demo.Main/packages.config
+++ b/Moq.Com.Demo.Main/packages.config
@@ -3,4 +3,5 @@
   <package id="GitVersion" version="3.6.5" targetFramework="net462" />
   <package id="GitVersionTask" version="3.6.5" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6071" targetFramework="net462" />
+  <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.17" targetFramework="net462" />
 </packages>
